# nk

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  TODO  databuf.h  kernel.c  kernel.h  msg.h  queue.h  setup_travis.sh  test.c  test.h  test_databuf.c  test_main.c  thd.c  thd.h
include/: alloc.h  databuf.h  kernel.h  msg.h  queue.h  sync.h  thd.h
include/nk/: alloc.h  kernel.h  msg.h  queue.h  sync.h  thd.h
src/: alloc.c  databuf.c  msg.c  sync.c  thd.c
src/x86_64/: ctx.s
test/: test.c  test.h  test_databuf.c  test_main.c  test_msg.c  test_sync.c  test_thd.c
